add config for embedded and tf-idf

--- a/configs/main/exp.yaml
+++ b/configs/main/exp.yaml
@@ -1,41 +1,52 @@
 Benchmarcks:
 
 - Name: libraries-basic
-#   # Content: results/testing_libraries_k3__0.csv
+# #   # Content: results/testing_libraries_k3__0.csv
   Configs:
-#   # - configs/main/config_repos/config_llm_libraries_dynamic.yaml
-#   # - configs/main/config_repos/config_llm_libraries_static.yaml
-#   # - configs/main/config_repos/config_llm_libraries_oldexamples.yaml
-  - configs/main/config_repos/config_llm_libraries_placeholder.yaml
-  - configs/main/config_repos/config_llm_libraries_baseline.yaml
-  - configs/main/config_repos/config_llm_libraries_error.yaml
-  - configs/main/config_repos/config_llm_libraries_errorplaceholder.yaml
-#   # - configs/main/config_repos/config_llm_libraries_randomExample.yaml
+# #   # - configs/main/config_repos/config_llm_libraries_dynamic.yaml
+# #   # - configs/main/config_repos/config_llm_libraries_static.yaml
+# #   # - configs/main/config_repos/config_llm_libraries_oldexamples.yaml
+#   - configs/main/config_repos/config_llm_libraries_placeholder.yaml
+#   - configs/main/config_repos/config_llm_libraries_baseline.yaml
+  - configs/main/config_repos/config_llm_libraries_baselineEnhancedPrompt.yaml
+#   - configs/main/config_repos/config_llm_libraries_error.yaml
+  # - configs/main/config_repos/config_llm_libraries_errorIterate.yaml
+#   - configs/main/config_repos/config_llm_libraries_errorplaceholder.yaml
+# #   # - configs/main/config_repos/config_llm_libraries_randomExample.yaml
   Content: results/placeholder_dataset/libraries.csv
 
 - Name: vmc-basic
-#   # Content: results/testing_libraries_k3__0.csv
+# #   # Content: results/testing_libraries_k3__0.csv
   Configs:
-#   # - configs/main/config_repos/config_llm_libraries_dynamic.yaml
-#   # - configs/main/config_repos/config_llm_libraries_static.yaml
-#   # - configs/main/config_repos/config_llm_libraries_oldexamples.yaml
-  - configs/main/config_repos/config_llm_DafnyVMC_placeholder.yaml
-  - configs/main/config_repos/config_llm_DafnyVMC_baseline.yaml
-  - configs/main/config_repos/config_llm_DafnyVMC_error.yaml
-  - configs/main/config_repos/config_llm_DafnyVMC_errorplaceholder.yaml
-#   # - configs/main/config_repos/config_llm_libraries_randomExample.yaml
+# #   # - configs/main/config_repos/config_llm_libraries_dynamic.yaml
+# #   # - configs/main/config_repos/config_llm_libraries_static.yaml
+# #   # - configs/main/config_repos/config_llm_libraries_oldexamples.yaml
+#   - configs/main/config_repos/config_llm_DafnyVMC_placeholder.yaml
+#   - configs/main/config_repos/config_llm_DafnyVMC_baseline.yaml
+#   - configs/main/config_repos/config_llm_DafnyVMC_error.yaml
+  - configs/main/config_repos/config_llm_DafnyVMC_errorIterate.yaml
+  - configs/main/config_repos/config_llm_DafnyVMC_baselineEnhancedPrompt.yaml
+#   - configs/main/config_repos/config_llm_DafnyVMC_errorplaceholder.yaml
+# #   # - configs/main/config_repos/config_llm_libraries_randomExample.yaml
   Content: results/placeholder_dataset/dafnyVMC.csv
-- Name: cedar-basic
+- Name: cedar-basicremain
   # Content: results/testing_libraries_k3__0.csv
   Configs:
   # - configs/main/config_repos/config_llm_libraries_dynamic.yaml
   # - configs/main/config_repos/config_llm_libraries_static.yaml
   # - configs/main/config_repos/config_llm_libraries_oldexamples.yaml
-  - configs/main/config_repos/config_llm_cedar_placeholder.yaml
-  - configs/main/config_repos/config_llm_cedar_baseline.yaml
-  - configs/main/config_repos/config_llm_cedar_error.yaml
-  - configs/main/config_repos/config_llm_cedar_errorplaceholder.yaml
+  # - configs/main/config_repos/config_llm_cedar_placeholder.yaml
+  # - configs/main/config_repos/config_llm_cedar_baseline.yaml
+  # - configs/main/config_repos/config_llm_cedar_error.yaml
+  - configs/main/config_repos/config_llm_cedar_errorIterate.yaml
+  - configs/main/config_repos/config_llm_cedar_baselineEnhancedPrompt.yaml
+  # - configs/main/config_repos/config_llm_cedar_errorplaceholder.yaml
   # - configs/main/config_repos/config_llm_libraries_randomExample.yaml
+  Content: results/placeholder_dataset/remaining_cedar_assertions.csv
+- Name: cedar-basic
+  Configs:
+  - configs/main/config_repos/config_llm_cedar_errorIterate.yaml
+  - configs/main/config_repos/config_llm_cedar_baselineEnhancedPrompt.yaml
   Content: results/placeholder_dataset/cedar.csv
 # - Name: libraries-k3--1
 #   Content: results/testing_libraries_k3__1.csv
