--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ multiprocess = "^0.70.16"
 numpy = "^1.26.4"
 scipy = "^1.12.0"
 scikit-learn = "^1.4.1.post1"
-
+matplotlib-venn = "^1.1.1"
 
 [tool.poetry.group.dev.dependencies]
 black = { extras = ["jupyter"], version = "^23.11.0" }
