--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ matplotlib-venn = "^1.1.1"
 black = { extras = ["jupyter"], version = "^23.11.0" }
 jupyter = "^1.0.0"
 
+vulture = "^2.14"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
