--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ black = { extras = ["jupyter"], version = "^23.11.0" }
 jupyter = "^1.0.0"
 
 vulture = "^2.14"
+voila = "^0.5.8"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
