--- a/configs/main/config_repos/config_llm_DafnyVMC_static.yaml
+++ b/configs/main/config_repos/config_llm_DafnyVMC_static.yaml
@@ -27,5 +27,5 @@ Model_parameters:
   Max_tokens: 2048
   Prompt_limit: 8192
   Encoding: "cl100k_base"
-Dafny_args: "--library /usr/local/home/eric/dafny_repos/Dafny-VMC/src/**/*.dfy --resource-limit 20000"
+Dafny_args: "--library ./DafnyGym/ground_truth/Dafny-VMC/src/**/*.dfy --resource-limit 20000"
 Results_file: ./results_llm/stats_llm_DafnyVMC_sample10_placeholder_4t.csv
