--- a/laurel/placeholder_finder/placeholder_finder.csproj
+++ b/laurel/placeholder_finder/placeholder_finder.csproj
@@ -3,13 +3,18 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <!-- <ImplicitUsings>enable</ImplicitUsings> -->
-    <!-- <Nullable>enable</Nullable> -->
+    <!-- <ImplicitUsings>enable</ImplicitUsings>
+ -->
+    <!-- <Nullable>enable</Nullable>
+ -->
   </PropertyGroup>
 
   <ItemGroup>
     <!-- <PackageReference Include="Boogie.ExecutionEngine" Version="3.1.2" /> -->
     <PackageReference Include="DafnyCore" Version="4.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
   </ItemGroup>
 
 </Project>
